--- a/app/globals.css
+++ b/app/globals.css
@@ -45,11 +45,12 @@ img {
   aspect-ratio: 1/1;
   width:350px;
   text-align: center;
+  border-radius: 12px;
 
 }
 
 h1 {
-  margin-top: 30px;
+  margin-top: 45px;
   text-align: center;
   color: white;
   font-size: 30px;
@@ -58,10 +59,19 @@ h1 {
 div {
   padding-top: 0px;
   padding-bottom: 10px;
+  padding-right: 50px;
+  padding-left: 40px;
+  text-align: center;
 }
 
 p {
   text-align: center;
+  display: inline-flex;
+  padding-top: -10px;
+  padding-left: 100px;
+  padding-bottom: -10px;
+  padding-right: 350px;
+  font-weight: bold;
 
 }
 
@@ -70,7 +80,7 @@ p {
   text-align: center;
 }
 
-h4 {
+tr {
   display: inline;
   padding-right: 150px;
 }
@@ -80,11 +90,16 @@ h4 {
   display: block;
   padding-top: 50px;
   padding-left: 250px;
-  padding-right: 250px;
+  padding-right: 450px;
+  font-size: 24px;
+  font-weight: bold;
+  
 }
 
 .toolbar {
   padding-top: 20px;
+  padding-right: 300px;
+  text-align: center; 
 }
 
 .logo {
@@ -93,6 +108,7 @@ h4 {
   border-radius: 8px;
   margin-right: 20px;
   margin-top: 20px;
+  margin-left: 250px;
 }
 
 .header {
@@ -100,6 +116,25 @@ h4 {
   align-content: center;
   text-align: center;
   padding-right: 30px;
-  margin-left: 30px;
+  margin-left: -80px;
+  padding-top: 25px;
   
+}
+
+.header-1 {
+  padding-top: 25px;
+}
+
+
+h2 {
+  margin-left: 100px;
+  margin-right: 300px;
+  padding-top: -10px;
+}
+
+.link {
+  text-align: center;
+  margin-left: 0px;
+  padding-left: 50px;
+  margin-right: 65px;
 }
